// Copyright (C) 2025 Author(s) of MCP Any
// SPDX-License-Identifier: Apache-2.0

edition = "2023";

package mcpany.config.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/duration.proto";
import "proto/config/v1/auth.proto";

option go_package = "github.com/mcpany/core/proto/config/v1";

// HttpCallDefinition describes how to map an MCP call to a specific HTTP request.
message HttpCallDefinition {
  // The unique identifier for the call.
  string id = 1;

  enum HttpMethod {
    HTTP_METHOD_UNSPECIFIED = 0;
    HTTP_METHOD_GET = 1;
    HTTP_METHOD_POST = 2;
    HTTP_METHOD_PUT = 3;
    HTTP_METHOD_DELETE = 4;
    HTTP_METHOD_PATCH = 5;
  }
  // Common tool schema.
  ToolSchema schema = 2;
  // The path of the HTTP endpoint (e.g., "/users/{userId}").
  string endpoint_path = 3;
  // The HTTP method to use for the request.
  HttpMethod method = 4;
  // Defines the parameters for the HTTP request.
  repeated HttpParameterMapping parameters = 5;
  // An optional input transformer to generate the request body.
  InputTransformer input_transformer = 6;
  // An optional output transformer to parse the response body.
  OutputTransformer output_transformer = 7;
  // Caching configuration to improve performance and reduce load on the upstream.
  CacheConfig cache = 8;
}

// WebsocketCallDefinition describes how to map an MCP call to a specific websocket message.
message WebsocketCallDefinition {
  // Common tool schema.
  ToolSchema schema = 1;
  // Defines the parameters for the websocket message.
  repeated WebsocketParameterMapping parameters = 3;
  // An optional input transformer to generate the request body.
  InputTransformer input_transformer = 4;
  // An optional output transformer to parse the response body.
  OutputTransformer output_transformer = 5;
  // Caching configuration to improve performance and reduce load on the upstream.
  CacheConfig cache = 6;
}

// WebrtcCallDefinition describes how to map an MCP call to a specific webrtc message.
message WebrtcCallDefinition {
  // Common tool schema.
  ToolSchema schema = 1;
  // Defines the parameters for the webrtc message.
  repeated WebrtcParameterMapping parameters = 3;
  // An optional input transformer to generate the request body.
  InputTransformer input_transformer = 4;
  // An optional output transformer to parse the response body.
  OutputTransformer output_transformer = 5;
  // Caching configuration to improve performance and reduce load on the upstream.
  CacheConfig cache = 6;
}

// CommandLineCallDefinition describes how to map an MCP call to a stdio command.
message CommandLineCallDefinition {
  // Common tool schema.
  ToolSchema schema = 1;
  // Defines the parameters for the stdio command.
  repeated CommandLineParameterMapping parameters = 2;
  // Caching configuration to improve performance and reduce load on the upstream.
  CacheConfig cache = 3;
  // The arguments to pass to the command.
  repeated string args = 4;
}

// InputTransformer defines how to render a template from input parameters.
message InputTransformer {
  // A text template to be rendered.
  // This is used for generating the request body for POST/PUT requests.
  // The template engine is compatible with Jinja2.
  string template = 1;
}

// OutputTransformer defines how to parse an output text into structured data.
message OutputTransformer {
  enum OutputFormat {
    JSON = 0; // The output is JSON, which will be parsed using JSONPath expressions.
    XML = 1;  // The output is XML, which will be parsed using XPath expressions.
    TEXT = 2; // The output is plain text, which will be parsed using regex.
  }
  // The format of the upstream service's output.
  OutputFormat format = 1;
  // A map of field names to the extraction expressions.
  // The interpretation of the expression depends on the 'format':
  // - JSON: JSONPath expressions.
  // - XML: XPath expressions.
  // - TEXT: Regular expressions (first capture group is used).
  map<string, string> extraction_rules = 2;
  // An optional template to render the extracted data into a final string.
  // If this is not provided, the raw extracted data will be returned.
  string template = 3;
}

// GrpcCallDefinition describes how to map an MCP call to a specific gRPC method.
message GrpcCallDefinition {
  // Common tool schema.
  ToolSchema schema = 1;
  // The fully-qualified gRPC service name.
  string service = 2;
  // The name of the gRPC method to call.
  string method = 3;
  // Note: For gRPC, parameter mapping is typically done by matching field names
  // between the MCP input schema and the gRPC request message.
  // Caching configuration to improve performance and reduce load on the upstream.
  CacheConfig cache = 4;
}

// OpenAPICallDefinition describes a call derived from an OpenAPI specification.
// This is often used for discovery rather than manual configuration.
message OpenAPICallDefinition {
  // Common tool schema.
  ToolSchema schema = 1;
  // An optional input transformer to generate the request body.
  InputTransformer input_transformer = 2;
  // An optional output transformer to parse the response body.
  OutputTransformer output_transformer = 3;
  // Caching configuration to improve performance and reduce load on the upstream.
  CacheConfig cache = 4;
}

// MCPCallDefinition describes how to map an MCP call to a specific MCP tool.
message MCPCallDefinition {
  // Common tool schema.
  ToolSchema schema = 1;
  // An optional input transformer to generate the request body.
  InputTransformer input_transformer = 2;
  // An optional output transformer to parse the response body.
  OutputTransformer output_transformer = 3;
  // Caching configuration to improve performance and reduce load on the upstream.
  CacheConfig cache = 4;
}

// ToolSchema provides common metadata for a tool.
message ToolSchema {
  // A human-readable title for the tool.
  string title = 1;
  // If true, the tool does not modify its environment.
  // Default: false
  bool read_only_hint = 2;
  // If true, the tool may perform destructive updates to its environment. If
  // false, the tool performs only additive updates.
  // (This property is meaningful only when ReadOnlyHint == false.)
  // Default: true
  bool destructive_hint = 3;
  // If true, calling the tool repeatedly with the same arguments will have no
  // additional effect on its environment.
  // (This property is meaningful only when ReadOnlyHint == false.)
  // Default: false
  bool idempotent_hint = 4;
  // If true, this tool may interact with an "open world" of external entities. If
  // false, the tool's domain of interaction is closed. For example, the world of
  // a web search tool is open, whereas that of a memory tool is not.
  // Default: true
  bool open_world_hint = 5;
  // The name of the tool, which will be used to invoke it.
  string name = 6;
  // A human-readable description of what the tool does.
  string description = 7;
}

// ParameterType defines the data type of a parameter.
enum ParameterType {
  STRING = 0;
  NUMBER = 1;
  INTEGER = 2;
  BOOLEAN = 3;
  ARRAY = 4;
  OBJECT = 5;
}

// ParameterSchema defines the schema for a single parameter, following Google's JSON schema.
message ParameterSchema {
  // The name of the input parameter from the MCP call.
  string name = 1;
  // A description of the parameter.
  string description = 2;
  // The data type of the parameter.
  ParameterType type = 3;
  // Whether the parameter is required.
  bool is_required = 4;
  // The default value of the parameter.
  google.protobuf.Value default_value = 5;
}

// HttpParameterMapping defines how to place an input parameter into an HTTP request.
message HttpParameterMapping {
  // The schema for the parameter.
  ParameterSchema schema = 1;
  // A secret value to use for the parameter.
  SecretValue secret = 2;
}

// WebsocketParameterMapping defines how to place an input parameter into a websocket message.
message WebsocketParameterMapping {
  // The schema for the parameter.
  ParameterSchema schema = 1;
  // A secret value to use for the parameter.
  SecretValue secret = 2;
}

// WebrtcParameterMapping defines how to place an input parameter into a webrtc message.
message WebrtcParameterMapping {
  // The schema for the parameter.
  ParameterSchema schema = 1;
  // A secret value to use for the parameter.
  SecretValue secret = 2;
}

// CommandLineParameterMapping defines how to pass an input parameter to a stdio process.
message CommandLineParameterMapping {
  // The schema for the parameter.
  ParameterSchema schema = 1;
  // A secret value to use for the parameter.
  SecretValue secret = 2;
}

// CacheConfig is a dummy message for now.
message CacheConfig {
  bool is_enabled = 1;
  google.protobuf.Duration ttl = 2;
  string strategy = 3;
}

// ToolDefinition describes a single capability or "tool" offered by a service.
message ToolDefinition {
  // The name of the tool, which will be used to invoke it.
  string name = 1;
  // A human-readable description of what the tool does.
  string description = 2;
  // The schema for the input parameters required by the tool.
  google.protobuf.Struct input_schema = 3;
  // The schema for the output of the tool.
  google.protobuf.Struct output_schema = 4;
  // Indicates if the tool produces a continuous stream of responses.
  bool is_stream = 5;
}

// GrpcToolDefinition wraps a GrpcCallDefinition.
message GrpcToolDefinition {
  GrpcCallDefinition call = 1;
}

// HttpToolDefinition wraps a HttpCallDefinition.
message HttpToolDefinition {
  // The schema for the tool.
  ToolSchema schema = 1;
  // The ID of the call definition to use for this tool.
  string call_id = 2;
}

// WebsocketToolDefinition wraps a WebsocketCallDefinition.
message WebsocketToolDefinition {
  WebsocketCallDefinition call = 1;
}

// WebrtcToolDefinition wraps a WebrtcCallDefinition.
message WebrtcToolDefinition {
  WebrtcCallDefinition call = 1;
}

// OpenAPIToolDefinition wraps a OpenAPICallDefinition.
message OpenAPIToolDefinition {
  OpenAPICallDefinition call = 1;
}

// CommandLineToolDefinition wraps a CommandLineCallDefinition.
message CommandLineToolDefinition {
  CommandLineCallDefinition call = 1;
}

// MCPToolDefinition wraps a MCPCallDefinition.
message MCPToolDefinition {
  MCPCallDefinition call = 1;
}
